--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run check-types && npm run lint && node esbuild.js --production",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
     "test": "vscode-test",
-    "build": "node build.mjs"
+    "build": "node build.mjs",
+    "package": "vsce package",
+    "publish": "vsce publish"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
@@ -53,5 +54,15 @@
   },
   "dependencies": {
     "mermaid": "^11.10.1"
-  }
+  },
+    "keywords": [
+    "Java",
+    "Spring",
+    "JPA",
+    "ERD",
+    "Mermaid",
+    "visualizer"
+  ],
+  "author": "Gokhan Yurur",
+  "license": "BUSL-1.1"
 }
