--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "spring-erdiagram-visualizer",
-  "displayName": "spring-erdiagram-visualizer",
-  "description": "Generates ER diagram by scanning Spring Boot JPA Entities",
+  "name": "jpa-visualizer",
+  "displayName": "JPA Visualizer",
+  "publisher": "gokhanyurur", 
+  "description": "Generates ER diagrams from your Java JPA entities",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.101.0"
@@ -14,8 +15,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "erdiagram.generate",
-        "title": "Generate ER Diagram from Spring Entities"
+        "command": "jpaVisualizer.generateDiagram",
+        "title": "JPA Visualizer: Generate Diagram"
       }
     ]
   },
@@ -25,25 +26,48 @@
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run check-types && npm run lint && node esbuild.js --production",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "build": "node build.mjs",
+    "package": "vsce package",
+    "publish": "vsce publish"
   },
   "devDependencies": {
-    "@types/vscode": "^1.101.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.101.0",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
-    "eslint": "^9.25.1",
-    "esbuild": "^0.25.3",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.8.3",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.5.2"
-  }
+    "@vscode/test-electron": "^2.5.2",
+    "esbuild": "^0.25.3",
+    "eslint": "^9.25.1",
+    "mocha": "^11.7.1",
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "vscode-test": "^1.6.1"
+  },
+  "dependencies": {
+    "mermaid": "^11.10.1"
+  },
+    "keywords": [
+    "Java",
+    "Spring",
+    "JPA",
+    "ERD",
+    "Mermaid",
+    "visualizer"
+  ],
+  "author": "Gokhan Yurur",
+  "license": "BUSL-1.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gokhanyurur/spring-erdiagram-visualizer.git"
+  },
+  "icon": "icon.png"
 }
