--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "JPA Visualizer",
   "publisher": "gokhanyurur", 
   "description": "Generates ER diagrams from your Java JPA entities",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "engines": {
     "vscode": "^1.101.0"
   },
@@ -55,13 +55,16 @@
   "dependencies": {
     "mermaid": "^11.10.1"
   },
-    "keywords": [
+  "keywords": [
     "Java",
-    "Spring",
+    "diagram",
+    
     "JPA",
     "ERD",
-    "Mermaid",
-    "visualizer"
+    "mermaid",
+    "visualization",
+    "database",
+    "entity"
   ],
   "author": "Gokhan Yurur",
   "license": "BUSL-1.1",
